--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,10 @@
     />
     <meta name="author" content="Michael Saucedo" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/mstile-150x150.png">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <!-- <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5"> -->
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#448aff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Slot Sauce</title>
